attempt fix for landing page tablet mode on safari

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -666,6 +666,7 @@ a:active {
 
     .tutor-pic {
         height: 400px;
+        max-width: 400px;
     }
 
     .hr-for-mobile {
